# QuoteProject

./: .gitignore  Readme.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
srv/mysite/: settings.py  urls.py
srv/quotes/: forms.py  models.py  urls.py  views.py
srv/quotes/migrations/: 0001_initial.py
srv/quotes/static/quotes/: main.css  script.js
srv/quotes/templates/quotes/: author_detail.html  base.html  home.html  search_results.html
srv/users/: apps.py  forms.py  models.py  urls.py  views.py
srv/users/migrations/: 0001_initial.py  0002_delete_profile.py  0003_initial.py
srv/users/static/users/: script.js
srv/users/templates/users/: account.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_subject.txt  register_login.html
srv/utils/: connect.py  fill_postgres_db.py  sql_form.py
srv/utils/test_connection/: config.py  test_conn_mongo.py  test_conn_pg.py
